--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         .text-success{
             color: white;
         }
+        .bg-primary{
+            background-color: blueviolet;
+        }
+        .text-success{
+            color: white;
+        }
     </style>
 </head>
 <body>
