--- a/index.html
+++ b/index.html
@@ -44,6 +44,19 @@
         </p>
     </div>
     <script src="index.js"></script>
+    <h1>Welcome to my Javascript</h1>
+    <div id="firstContainer" class="container">
+        <button id="click" onclick="clicked()">Click Me</button>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, quae.
+        </p>
+    </div>
+    <div class="container">
+        <p>
+            This is a paragraph
+        </p>
+    </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
